# VLM-Fraud-Detection

./: .env.example  README.md  config.py  fraud_detector.py  main.py  prompts.py  pyproject.toml  requirements.txt
notebooks/: EDA_casia-dataset.ipynb
src/vlm_fraud_detection/: __init__.py  cli.py  config.py  detector.py  embeddings.py  fewshots.py  prompts.py
