[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vlm-fraud-detection"
version = "0.1.0"
description = "A Python library for image-based fraud detection using Google Vertex AI and few-shot non-fraud selection."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
  { name = "Your Name", email = "you@example.com" }
]
keywords = ["fraud-detection", "vertex-ai", "vlm", "gcp", "image-analysis", "few-shot"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent"
]
dependencies = [
  "numpy>=1.24.0",
  "Pillow>=10.0.0",
  "vertexai>=1.0.0",
  "google-cloud-aiplatform>=1.43.0"
]

[project.urls]
Homepage = "https://github.com/your-org/vlm-fraud-detection"
Documentation = "https://github.com/your-org/vlm-fraud-detection/blob/main/README.md"

[project.scripts]
vlm-fraud-detect = "vlm_fraud_detection.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
